--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "parcel-bundler": "^1.12.3",
     "react": "^16.8.6",
     "react-aria-modal": "^4.0.0",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-slick": "^0.25.2",
+    "slick-carousel": "^1.8.1"
   }
 }
